# xiaomi-ble-rs

./: .codespellignore  .pre-commit-config.yaml  Cargo.toml  README.md
examples/: passive-ble-sensor-listener.rs
src/: device.rs  error.rs  hhccjcy10.rs  lib.rs  mibeacon.rs  miscale.rs  sensor.rs  service.rs  util.rs
