[package]
name = "xiaomi-ble"
version = "0.1.0"
edition = "2021"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
description = "Parser for Xiamo BLE data structures."
readme = "README.md"
repository = "https://github.com/Holzhaus/xiamo-ble-rs"
license = "MPL-2.0"
keywords = ["xiaomi", "ble", "mibeacon", "miflora", "parser"]
categories = ["parser-implementations"]
exclude = [".*"]

[dependencies]
