[package]
name = "xiaomi-ble"
version = "0.1.0"
edition = "2021"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
description = "Parser for Xiamo BLE data structures."
readme = "README.md"
repository = "https://github.com/Holzhaus/xiamo-ble-rs"
license = "MPL-2.0"
keywords = ["xiaomi", "ble", "mibeacon", "miflora", "parser"]
categories = ["parser-implementations"]
exclude = [".*"]

[dependencies]
binrw = "0.13"
modular-bitfield = "0.11"
log = "0.4"
uuid = "1.8"
phf = { version = "0.11", features = ["macros"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"]}
btleplug = "0.11"
futures = "0.3.30"
pretty_env_logger = "0.5"
